<resources>
    <string name="app_name">&appName;</string>
    <string name="facebook_app_id" translatable="false">1094216774397177</string>
    <string name="google_login_key" translatable="false">272389312171-c6gnoekmo5f8dgsuo0uk8mlgph1alg9t.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="waitingForApproval">Waiting for your account to be verified by the admin.</string>
    <string name="close">Close</string>
    <string name="or_connect_with_social_media">Or connect with social</string>
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="whats_your_phone_number">What\'s your phone number?</string>
    <string name="sample_mail_id">name@example.com</string>
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no" translatable="false">9876543210</string>
    <string name="time_taken">Time Taken</string>
    <string name="password_txt" translatable="false">******</string>
    <string name="sample_base_price" translatable="false">0</string>
    <string name="sample_distance" translatable="false">1 KM</string>
    <string name="sample_time_travel" translatable="false">1 hr</string>
    <string name="invalid_otp">Please enter OTP</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="phone_validation">Enter your Phone number</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Change Password</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated.</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="cancel_ride">Cancel &ride;</string>
    <string name="view_receipt">View Receipt</string>
    <string name="cancel">Cancel</string>
    <string name="cencel_request">Are you sure you want to cancel the &ride;?</string>
    <string name="exit_confirm">Are you sure you want to logout?</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="fb_cancel">Facebook login cancelled</string>
    <string name="fb_error">Facebook login failed</string>
    <string name="google_login">Google login failed</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="server_down">Unable to reach server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Enter your email ID.</string>
    <string name="not_valid_email">Not a valid email ID.</string>
    <string name="password_validation">Password could not be left empty.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Mobile number required.</string>
    <string name="request_reject">Request rejected successfully</string>
    <string name="request_accept">Request accepted successfully</string>
    <string name="request_cancel">You have cancelled the request</string>
    <string name="write_your_comment">Write your comments</string>
    <string name="approved" translatable="false">Approved</string>
    <string name="banned" translatable="false">Banned</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="your_wallet_amount">Your wallet amount is</string>
    <string name="sample_amount" translatable="false">1450</string>
    <string name="go_online">Go Online</string>
    <string name="go_offline">GO OFFLINE</string>
    <string name="invalid_credentials">Invalid Username and Password.</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">No delivery available.</string>
    <string name="no_upcoming_trips">No Upcoming deliveries available.</string>
    <string name="no_rides">No &rides; completed.</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="payment_methods_past">Payment Method</string>
    <string name="sample_name">Will Smith</string>
    <string name="tap_when_arrived">ARRIVED</string>
    <string name="tap_when_pickedup">PICKEDUP</string>
    <string name="tap_when_paid">CONFIRM PAYMENT</string>
    <string name="rate_user">SUBMIT</string>
    <string name="rate_your_trip">Rate your delivery with</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password.</string>
    <string name="please_enter_new_pass">Please enter new password.</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password.</string>
    <string name="different_passwords">Password doesn\'t match.</string>
    <string name="home">Home</string>
    <string name="your_trips">Your Deliveries</string>
    <string name="wallet">Wallet</string>
    <string name="help">Contact us</string>
    <string name="earnings">Earnings</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="valid_image">No image found</string>
    <string name="user_no_mobile">User do not have a valid mobile number.</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="otp_validation">OTP field is required</string>
    <string name="confirm_password_validation">Password Mismatch</string>
    <string name="note">Note : Please enter the otp send to your registered email address</string>
    <string name="secrete_code">Enter OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel_confirm">Are you sure you want to cancel the &ride;?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connect_with_social_media">connect with social</string>
    <string name="service">&service;</string>
    <string name="no_services">No services assigned</string>
    <string name="choose_acc">Choose an account</string>
    <string name="facebook_name" translatable="false">Facebook</string>
    <string name="google_name" translatable="false">Google</string>
    <string name="commission">&service; charge</string>
    <string name="no_comments">No comment available</string>
    <string name="base_price">Base fare</string>
    <string name="distance_price">Distance fare</string>
    <string name="profile">Profile</string>
    <string name="sos_confirm">Are you sure want to proceed with emergency call?</string>
    <string name="choose_type">Choose type</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_alone">Invoice</string>
    <string name="pick_up">Pick up Location </string>
    <string name="drop_at">Drop Location </string>
    <string name="reason_to_cancel">Reasons cancellation</string>
    <string name="booking_id_colon">Booking ID : </string>
    <string name="booking_id">Booking ID</string>
    <string name="source_location">Source Location</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="summary">Summary</string>
    <string name="total_rides">TOTAL NO OF &ridescap;</string>
    <string name="revenue">REVENUE</string>
    <string name="schedule_rides">NO OF SCHEDULED &ridescap;</string>
    <string name="canceled_rides">CANCELLED &ridescap;</string>
    <string name="rides">Deliveries</string>
    <string name="upcoming_rides">Upcoming &rides;</string>
    <string name="help_msg">Our team will reply soon!</string>
    <string name="no_address">No address available</string>
    <string name="email_exist">The email has already been taken</string>
    <string name="first_name_no_number">First name do not accept numbers</string>
    <string name="last_name_no_number">Last name do not accept numbers</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient,Our assisants are busy right now</string>
    <string name="loading">Loading&#8230;</string>
    <string name="sample_earnings" translatable="false">0/0</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="amount">Amount</string>
    <string name="where_to">Where to?</string>
    <string name="user">User</string>
    <string name="sample_date_time" translatable="false">30th sept 2017 at 8:30pm</string>
    <string name="sample">No 10 , prestege palladium bayan ,greams road , thousand lights chennai</string>
    <string name="call">CALL</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="sample_amt" translatable="false">0</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="rate_your_trips">Rate your delivery</string>
    <string name="server">Server is temporarily unavailable.! Please check later.</string>
    <string name="timer_start">1</string>
    <string name="schedule">Schedule</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="upcoming_trips">Upcoming Deliveries</string>
    <string name="past_trips">Past Deliveries</string>
    <string name="battery">Your battery is low, please charge your mobile!</string>
    <string name="update">Update</string>
    <string name="help_title">Contact us</string>
    <string name="new_password_validation">New password should not be same as old password.</string>
    <string name="password_validation1">Password must contains minimum 8 characters, maximum 16 characters</string>
    <string name="today_completed">Today Completed Target</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="fresh">W e l c o m e</string>
    <string name="search">D r i v e</string>
    <string name="bookmark">E a r n</string>
    <string name="fresh_description">Introducing &appName;
        Services to take rides from the &appNamealone; app users.</string>
    <string name="vehicle_Details" translatable="false">Vehicle Details</string>
    <string name="vehicle_doc_details" translatable="false">Vehicle Document Details</string>
    <string name="order" translatable="false">Order</string>
    <string name="delivery_address" translatable="false">Delivery Address</string>
    <string name="tap_start" translatable="false">Tap To Start</string>
    <string name="trip">Delivery </string>
</resources>