<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/back_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Enter your details to register"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/email"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLines="1"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLines="1"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rilixtech.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:ccp_defaultNameCode="my"/>

                    <com.delivery.provider.Utilities.MyEditText
                        android:id="@+id/mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1" />

                </LinearLayout>



                <!--Car Details-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/vehicle_Details"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <Spinner
                    android:id="@+id/service_type"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/choose_type"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone" />

                <Spinner
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/vehicle_doc_details"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>

                <ImageView
                    android:id="@+id/upload_img"
                    android:layout_width="0dp"
                    android:contentDescription="@string/app_name"
                    android:layout_height="0dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_right"
        android:visibility="visible"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>