<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue_dark"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/back_icon"
            android:tint="@color/text_color_white" />

        <com.delivery.provider.Utilities.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textColor="@color/text_color_white"
            android:textSize="18sp" />
    </LinearLayout>

    <com.delivery.provider.Utilities.MyBoldTextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/help_title"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/_20sdp" />


    <ImageView
        android:id="@+id/img_executive"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_below="@+id/title_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/help_executive" />


    <LinearLayout
        android:id="@+id/lnrIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_executive"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_mail"
            android:src="@drawable/help_call"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_mail"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/help_mail" />

        <ImageView
            android:id="@+id/img_web"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_mail"
            android:src="@drawable/help_web"
            android:visibility="gone" />
    </LinearLayout>

    <com.delivery.provider.Utilities.MyBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrIcons"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/help_msg"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

</RelativeLayout>
